# e-motion

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
app/: __init__.py  db.py  main.py  repo.py  seed.py  wheel.py
app/static/css/: app.css
app/templates/: base.html  clasificar.html  index.html  lexico.html  lexico_color.html  lexico_palabra.html  segmento.html
app/templates/partials/: _card.html  _dist.html
assets/: README.md  tokens.css  tokens.json
design/source/: Colores.ai  mapa.ai
docs/: Colores-deck.pptx  Colores-documento-proyecto.html
docs/detallada/: Colores-documento-proyecto.interactivo.html
seed/: palabras.json
tests/: conftest.py  test_fase1.py  test_smoke.py  test_wheel.py
